Added authentication on endpoints
